package behavioral.state.stateshascontext.states;

import behavioral.state.stateshascontext.Context;

public interface State {

  public void process(Context context);

}
